falta modificar la ruta de los enlaces y publicar las actividades realizadas

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 
     <footer id="contacto">
         <div class="footer-content">
-            <p><strong>Alicia Vázquez</strong> | Desarrollo de Aplicaciones Multiplataforma</p>
-            <p>Contacto: <a href="mailto:alicia.vazquez@itb.cat">alicia.vazquez@itb.cat</a></p>
+            <p><strong>Albert Domingo Montemar</strong> | Desarrollo de Aplicaciones Multiplataforma</p>
+            <p>Contacto: <a href="mailto:albert.domingo.7e7@itb.cat">albert.domingo.7e7@itb.cat</a></p>
             <div class="cc">
                 Licencia Creative Commons BY-NC-SA 4.0
             </div>
