--- a/actividades/ActividadHacker/hacker.html
+++ b/actividades/ActividadHacker/hacker.html
@@ -15,6 +15,9 @@
             <button>Enviar (No funciona aún)</button>
         </div>
     </article>
+    <article id="articulo2">
+
+    </article>
     
     <script src="./hacker.js">
 
