--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </ul>
                     <h5 class="section-title">Ejercicios</h5>
                     <ul class="list-styled list-exercises">
-                        <li><a href="https://aliciaitb.github.io/DAM25_JS/M09_01_JS/01_Numbers.html">Ejercicio Numbers</a></li>
+                        <li><a href="./actividades/ejercicioNumers/numbers.html">Ejercicio Numbers</a></li>
                     </ul>
                 </div>
                 <div class="card-footer">
@@ -129,14 +129,11 @@
                 </div>
                 <div class="card-content">
                     <div class="card-header">
-                        <h3>Funciones y Programación Funcional</h3>
+                        <h3>Ejercicios de funciones y Programación Funcional</h3>
                         <span class="topic">Arrow functions, Parámetros, Destructuring y Arrays.</span>
                     </div>
                     <p class="text">
-                        Transición de funciones tradicionales a Arrow Functions y gestión del contexto de this. Uso de
-                        parámetros por defecto y Rest parameters. Introducción profunda a Arrays y sus métodos
-                        funcionales (map, filter, reduce, find) para manipular datos sin bucles manuales. Uso de
-                        Destructuring para extraer datos de arrays y objetos de forma eficiente.
+                        Todos los ejercicios realizados de lenguaje de marcas vistos en las presentaciones del temario
                     </p>
                     <h5 class="section-title">Índice</h5>
                     <ol class="index">
@@ -147,10 +144,6 @@
 
 
                     </ol>
-                    <h5 class="section-title">Ejemplos de Clase</h5>
-                    <ul class="list-styled list-examples">
-                        <li><a href="index.html#">Ejemplo 1</a></li>
-                    </ul>
                     <h5 class="section-title">Ejercicios</h5>
                     <ul class="list-styled list-exercises">
                         <li><a href="index.html#">Ejercicio 1</a></li>
@@ -162,7 +155,7 @@
                 </div>
             </article>
 
-  <!--           <article class="card">
+            <article class="card">
                 <div class="card-image">
                     <img src="https://placehold.co/600x350/2980b9/white?text=Arrays" alt="Tema Arrays">
                     <span class="tag tag-m04">M04</span>
