--- a/actividades/miniTienda/minitienda.html
+++ b/actividades/miniTienda/minitienda.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tee Lab</title>
+    <link rel="stylesheet" href="minitienda.css">
+    <script src="minitienda.js"></script>
 </head>
-<body>
-    
+<body onload="init()">
+    <h1>TeeLab - Catálogo</h1>
+    <div id="contenedor-tienda"></div>
 </body>
 </html>
